--- a/app/src/main/res/layout/layout_base.xml
+++ b/app/src/main/res/layout/layout_base.xml
@@ -3,20 +3,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:layout_editor_absoluteY="25dp">
 
     <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/toolbar"
-        app:popupTheme="@style/ToolbarPopupTheme"
-        android:layout_width="384dp"
-        android:layout_height="55dp"
+        android:layout_width="match_parent"
+        android:layout_height="53dp"
         android:background="@color/colorPrimary"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/root_layout_ll"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed"
         app:logo="@mipmap/ic_launcher"
+        app:popupTheme="@style/ToolbarPopupTheme"
         app:subtitle="Title"
         app:title="Subtitle"
         app:titleTextColor="@color/white">
@@ -33,12 +37,9 @@
     <LinearLayout
         android:id="@+id/root_layout_ll"
         android:layout_width="match_parent"
-        android:layout_height="512dp"
+        android:layout_height="0dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
     </LinearLayout>
