--- a/app/src/main/res/layout/layout_base.xml
+++ b/app/src/main/res/layout/layout_base.xml
@@ -13,7 +13,7 @@
         android:layout_height="53dp"
         android:background="@color/colorPrimary"
         android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/root_layout_ll"
+        app:layout_constraintBottom_toTopOf="@id/root_layout_ll"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,7 +40,7 @@
         android:layout_height="0dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar">
+        app:layout_constraintTop_toBottomOf="@id/toolbar">
 
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
