--- a/app/src/main/res/layout/layout_base_root_animation.xml
+++ b/app/src/main/res/layout/layout_base_root_animation.xml
@@ -39,12 +39,26 @@
     </android.support.design.widget.AppBarLayout>
 
     <LinearLayout
-        android:id="@+id/root_layout_ll"
+        android:id="@+id/content_layout_ll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#cccccc"
         android:orientation="vertical"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        app:layout_constraintBottom_toTopOf="@id/bottom_layout_ll"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar">
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/bottom_layout_ll"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent">
 
     </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
