--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,7 @@
     <com.roughike.bottombar.BottomBar
         android:id="@+id/bottomBar"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="55dp"
         android:layout_alignParentBottom="true"
         app:bb_behavior="shifting"
         app:bb_tabXmlResource="@xml/bottom_bar_menu"
@@ -53,6 +53,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <android.support.v4.view.ViewPager
+        android:visibility="gone"
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
