--- a/app/src/main/res/layout/item_test2.xml
+++ b/app/src/main/res/layout/item_test2.xml
@@ -3,19 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="3dp">
 
     <android.support.v7.widget.CardView
-        app:cardCornerRadius="15dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="10dp">
 
         <TextView
-            android:gravity="center"
-            android:background="#cccccc"
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#ea5858"
+            android:gravity="center"
             android:text="TextView"
             android:textColor="@color/white"
             android:textSize="50sp"
