--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="black">#000000</color>
 
     <color name="tool_bar_base_background">#5a93d4</color>
+    <color name="activity_root_layout_background">#00000000</color>
 </resources>
