增加格式化json数据打印功能

--- a/app/src/main/res/layout/layout_base_list.xml
+++ b/app/src/main/res/layout/layout_base_list.xml
@@ -35,7 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-        <android.support.v7.widget.RecyclerView
+        <com.yanzhenjie.recyclerview.swipe.SwipeMenuRecyclerView
             android:id="@+id/base_pager_list_rv"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
