--- a/app/src/main/res/layout/layout_base_root.xml
+++ b/app/src/main/res/layout/layout_base_root.xml
@@ -1,64 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/base_root_layout"
+    android:id="@+id/base_root_dl"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:layout_editor_absoluteY="25dp">
+    android:background="@color/white">
 
-    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/toolbar"
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/base_root_cl"
         android:layout_width="match_parent"
-        android:layout_height="83dp"
-        android:background="@color/colorPrimary"
-        android:fitsSystemWindows="true"
-        app:popupTheme="@style/ToolbarPopupTheme"
-        app:subtitle="小标题"
-        app:title="大标题"
-        app:titleTextColor="@color/white">
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
-        <TextView
-            android:id="@+id/tv_title"
-            android:layout_width="wrap_content"
+        <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="83dp"
+            android:background="@color/tool_bar_base_background"
+            android:fitsSystemWindows="true"
+            app:popupTheme="@style/ToolbarPopupTheme"
+            app:subtitle=""
+            app:title=""
+            app:titleTextColor="@color/white">
+
+            <TextView
+                android:id="@+id/base_root_title_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text=""
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:visibility="gone" />
+        </android.support.v7.widget.Toolbar>
+
+        <LinearLayout
+            android:id="@+id/base_root_top_layout_ll"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="中心标题"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            android:visibility="gone" />
-    </android.support.v7.widget.Toolbar>
+            android:orientation="vertical"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/toolbar">
 
-    <LinearLayout
-        android:id="@+id/top_layout_ll"
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/content_layout_ll"
+            android:layout_width="360dp"
+            android:layout_height="0dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toTopOf="@+id/base_root_bottom_layout_ll"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/base_root_top_layout_ll">
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/base_root_bottom_layout_ll"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+    </android.support.constraint.ConstraintLayout>
+
+    <!--去掉background，会影响4.4系统的状态栏-->
+    <android.support.design.widget.NavigationView
+        android:id="@+id/base_root_nav_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar">
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/content_layout_ll"
-        android:layout_width="360dp"
-        android:layout_height="0dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_layout_ll"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/top_layout_ll">
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/bottom_layout_ll"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-</android.support.constraint.ConstraintLayout>
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@color/white"
+        android:fitsSystemWindows="true" />
+</android.support.v4.widget.DrawerLayout>
